[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
jsonwebtoken = "8.3"
bcrypt = "0.14"
env_logger = "0.10"
utoipa = { version = "3.5.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.diesel]
version = "2.0.0"
features = ["postgres", "r2d2", "uuid", "chrono"]

[target.x86_64-pc-windows-msvc]
linker = "link.exe"

[dependencies.libpq-sys]
version = "0.12.0"
features = ["static"]
